added-additional-timer-for-train-departing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,12 @@ table {
   th {
     color: rgb(91, 228, 125);
   }
+  td {
+    &.arriving-now {
+      color: green;
+      font-weight: bold;
+    }
+  }
   tr:nth-child(even) {
     background: #f2f2f2;
   }
