--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="loading" class="top-text">Welcome to Tram Departures</div>
+<div class="container">
+  <div *ngIf="loading" class="top-text">Welcome to Tram Departures</div>
 <div *ngIf="error" class="error">{{ error }}</div>
 
 <table *ngIf="departures.length > 0" class="tram-table">
@@ -9,19 +10,25 @@
       <th>Scheduled Time</th>
       <th>Expected Time</th>
       <th>State</th>
+      <!-- additional useful data added - countdown-->
+      <th>Countdown</th>
     </tr>
   </thead>
   <tbody class="tram-table__tbody">
-    <tr *ngFor="let dep of departures" class="tram-table__tbody__trow">
+    <tr *ngFor="let dep of departures"
+    [class.arriving-now]="dep.countdown === '0m 0s'" 
+     class="tram-table__tbody__trow">
       <td>{{ dep.destination }}</td>
       <td>{{ dep.direction }}</td>
       <td>{{ dep.scheduled  }}</td>
       <td>{{ dep.expected  }}</td>
       <td>{{ dep.state }}</td>
+      <td>{{ dep.countdown }}</td>
     </tr>
   </tbody>
 </table>
 
 <div *ngIf="departures.length === 0 && !loading && !error" class="empty-data">
   No departures available right now.
+</div>
 </div>
